@@ -85,7 +85,7 @@ class TestTypeshedLoading(parser_test_base.ParserTest):
       self.assertNotIn("/", module_name)
 
 
-class TestTypeshedParsing(test_base.TargetIndependentTest):
+class TestTypeshedParsing(test_base.TargetPython27FeatureTest):
   """Tests a handful of typeshed modules.
 
   The list was generated using
