@@ -1,5 +1,6 @@
 Version (upcoming)
 * (in progress) Make error messages for Python operators friendlier.
+* Set the default target python version to the host version.
 * Change default behavior to stop at first error and add a --keep-going option.
 * Flag annotations with the wrong parameter count and invalid uses of NoReturn.
 * Improve pytype and merge-pyi status messages.
